# Symbol

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
codex/skills/symbol-memory/: SKILL.md
src/symbol_memory/: __init__.py  __main__.py  cli.py  decorator.py  models.py  query.py  resolver.py  scanner.py  storage.py
src/symbol_memory/api/: __init__.py  decorator.py  memory.py
src/symbol_memory/artifacts/: __init__.py  renderer.py  storage.py
src/symbol_memory/cli/: __init__.py  formatting.py  main.py
src/symbol_memory/core/: __init__.py  ids.py  models.py
src/symbol_memory/indexing/: __init__.py  resolver.py  scanner.py
tests/: test_validation.py
