[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "symbol-memory"
version = "0.1.0"
description = "Manual markdown-based symbol memory for Python codebases."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["llm", "code-navigation", "symbol-index", "python", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pydantic>=2,<3",
  "typer>=0.12,<1",
]

[project.scripts]
symbol-memory = "symbol_memory.cli.main:main"

[project.urls]
Homepage = "https://github.com/Madikhan33/Symbol"
Repository = "https://github.com/Madikhan33/Symbol"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
